--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Louis Amoah's Website</title>
-    </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Louis Amoah's Website</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
     <body>
        
         
